Set a responsive width on inputs so that fieldset alignment on small screens is correct

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -99,7 +99,8 @@ label {
 
 input[type="text"] {
   float: right;
-  width: 23em;
+  max-width: 20em;
+  width: 100%;
 }
 
 fieldset {
